--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "config": "^3.3.12",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.4",
+    "mongoose": "^8.5.4"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.4"
   }
 }
