--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "boxicons": "^2.1.4",
     "chart.js": "^4.4.4",
+    "cors": "^2.8.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "lucide-react": "^0.441.0",
