--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "jspdf-autotable": "^3.8.3",
     "lucide-react": "^0.441.0",
     "nodemon": "^3.1.7",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
     "react-chartjs-2": "^5.2.0",
