--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,16 @@
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "boxicons": "^2.1.4",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "fortawesome": "^0.0.1-security",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "lucide-react": "^0.441.0",
     "nodemon": "^3.1.7",
     "notistack": "^3.0.1",
-    "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
